--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>  Profile Testing | By Jay Ello</title>
+  <title> Web Profile| By Jay Ello</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css'><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -17,7 +17,7 @@
     </div>
     <div class="btn"><span></span></div>
   </div>
-  <div class="box"><i class="fa fa-github" onclick="window.location.href='https://github.com/succoding'"></i><i class="fa fa-linkedin" onclick="window.location.href='https://www.linkedin.com/in/'"></i><i class="fa fa-twitter" onclick="window.location.href='https://twitter.com/'"></i><i class="fa fa-instagram" onclick="window.location.href='https://www.instagram.com/dxrkc_.jxy/'"></i><i class="fa fa-codepen" onclick="window.location.href='https://codepen.io/'"></i></div>
+  <div class="box"><i class="fa fa-github" onclick="window.location.href='https://github.com/succoding'"></i><i class="fa fa-facebook" onclick="window.location.href='https://www.facebook.com/PWDDestroyer/'"></i><i class="fa fa-twitter" onclick="window.location.href='https://twitter.com/'"></i><i class="fa fa-instagram" onclick="window.location.href='https://www.instagram.com/dxrkc_.jxy/'"></i><i class="fa fa-codepen" onclick="window.location.href='https://codepen.io/pen?fbclid=IwVERDUAPdf01leHRuA2FlbQIxMABzcnRjBmFwcF9pZAwzNTA2ODU1MzE3MjgAAR4rdKEiuTJJw409BaPmpIwDw5Fmt8Fz9zbpI1c0A04zKUj0UIKErp2vaNz1-w_aem_B0I5BZWdCMcM5FdBXIcTDw'"></i></div>
 </div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script><script  src="./script.js"></script>
@@ -25,8 +25,9 @@
 </body>
 <footer style="text-align: center; position: fixed; bottom: 0; width: 100%;">
   <p class="copyright" style="margin: 1; padding: 0;">
-    <a href="https://linktr.ee/" style="text-decoration: none; color: white;"> &copy; <script>document.write(new Date().getFullYear());</script> Profile Test. By Jay Ello</a>
+    <a href="https://linktr.ee/" style="text-decoration: none; color: white;"> &copy; <script>document.write(new Date().getFullYear());</script> Web Profile. By Jay Ello</a>
   </p>
 </footer>
 
 </html>
+
