Fix HTML formatting and update CodePen link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="btn"><span></span></div>
   </div>
-  <div class="box"><i class="fa fa-github" onclick="window.location.href='https://github.com/succoding'"></i><i class="fa fa-facebook" onclick="window.location.href='https://www.facebook.com/PWDDestroyer/'"></i><i class="fa fa-twitter" onclick="window.location.href='https://twitter.com/'"></i><i class="fa fa-instagram" onclick="window.location.href='https://www.instagram.com/dxrkc_.jxy/'"></i><i class="fa fa-codepen" onclick="window.location.href='https://codepen.io/pen?fbclid=IwVERDUAPdf01leHRuA2FlbQIxMABzcnRjBmFwcF9pZAwzNTA2ODU1MzE3MjgAAR4rdKEiuTJJw409BaPmpIwDw5Fmt8Fz9zbpI1c0A04zKUj0UIKErp2vaNz1-w_aem_B0I5BZWdCMcM5FdBXIcTDw'"></i></div>
+  <div class="box"><i class="fa fa-github" onclick="window.location.href='https://github.com/succoding'"></i><i class="fa fa-facebook" onclick="window.location.href='https://www.facebook.com/PWDDestroyer/'"></i><i class="fa fa-twitter" onclick="window.location.href='https://twitter.com/'"></i><i class="fa fa-instagram" onclick="window.location.href='https://www.instagram.com/dxrkc_.jxy/'"></i><i class="fa fa-codepen" onclick="window.location.href='https://codepen.io/Jay-Ello'"></i></div>
 </div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script><script  src="./script.js"></script>
@@ -30,4 +30,5 @@
 </footer>
 
 </html>
+
 
