--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="profile">
-  <div class="photo"><img src="thumbnile.png"/></div>
+  <div class="photo"><img src="tiktok.jpg"/></div>
   <div class="content">
     <div class="text">
       <h3>Jay Ello</h3>
@@ -30,5 +30,6 @@
 </footer>
 
 </html>
+
 
 
